新增：实现OSS私有文件访问URL获取接口，支持文件下载功能，并优化相关参数处理逻辑